bizinikiwi/pezframe/support/test/tests/pezpallet_ui/lock_id_duplicate.stderr
error: Invalid duplicated `LockId` definition
  --> tests/pezpallet_ui/lock_id_duplicate.rs:30:14
   |
30 |     pub enum LockId {}
   |              ^^^^^^
